--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-        <script src="./script.js"></script>
-        <script src="./verbs.js"></script>
+        
 
     <title>Verbs Game</title>
 </head>
@@ -28,7 +27,7 @@
       <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
     </svg>
 </div>
-    <h1 id="show verb" class="text-center"i>Play to Start</h1>
+    <h1 id="showVerb" class="text-center"i>Play to Start</h1>
     <div class="container text-center">
         <div id="verbs-container">
             <div id="showImage"></div>
@@ -39,9 +38,11 @@
             <p id="fourth-verb"></p>
             
         </div>
-        <small class="counter">
+        <small id="counter">
             <span id="all-right-answers"></span>
         </small>
     </div>
 </body>
+<script src="./verbs.js"></script>
+<script src="./script.js"></script>
 </html>
